--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,5 @@
 <% if user_signed_in? %>
+  <li><%= link_to 'マイページ', edit_user_registration_path %></li>
   <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
 <% else %>
   <li><%= link_to 'ログイン', new_user_session_path  %></li>
