--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,36 @@
- <p class="flash"><%= notice %><%= alert %></p>
+<head>
+  <meta charset="UTF-8">
+  <title>p3shop</title>
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="top.scss">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 
-<h1>Top#index</h1>
-<p>Find me in app/views/top/index.html.erb</p>
+</head>
+
+<!-- <div class="box"> -->
+
+
+<section class="container-fluid">
+ <p class="flash"><%= notice %><%= alert %></p>
+  <div class="row">
+   <!-- <div class="box"> -->
+      <div class="image col-md-6 col-sm-6">
+       <i class="fa fa-thumbs-o-up fa-5x" aria-hidden="true"></i>
+      </div>
+
+     <div class="login col-md-6 col-sm-6">
+ 		   <h3>p3shop</h3>
+ 		   <p>アカウントを切り替える</p>
+       
+       <%= link_to p3s_path do %>
+      <h4>一覧へ</h4>
+      <i class="fa fa-sign-in fa-5x" aria-hidden="true"></i>
+      <% end %>
+     </div>
+ 	   </div>
+    
+   <!-- </div> -->
+
+
+ </section>
+ 
