--- a/app/views/p3s/new.html.erb
+++ b/app/views/p3s/new.html.erb
@@ -1,16 +1,32 @@
-<%= form_for(@p3) do |f| %>
-<%= f.label :title %>
-<%= f.text_field :title %><br>
+<p id="notice"><%= notice %></p>
+<% if @p3.errors.any? %>
+     <div id="error_explanation">
+      <!-- バリデーションエラーの件数表示   -->
+      <h2><%= @p3.errors.count %>件のエラーがあります</h2>
+
+       <ul>
+        <% @p3.errors.full_messages.each do |msg| %>
+         <li><%= msg %></li>
+         <% end %>
+       </ul>
+       </div>
+       <% end %>
+       <%= link_to "商品一覧画面にもどる" , p3s_path, class: 'btn btn-default' %>
+  <div class="container">
+  <div class="col-md-8 col-md-offset-2">
+   <%= form_for(@p3) do |f| %>
+     <div class="row">
+     <%= f.file_field :picture %>
+
+    </div>
+  <div class="row">
+    <%= f.text_field :content, class: 'btn btn-default' %>
+  </div>
 
 
-<%= f.label :content %>
-<%= f.text_field :content %><br>
+    <%= f.submit class: 'btn btn-default push' %>
+ </div>
+ <% end %>
 
-
-<%= f.submit %>
-<% end %>
-
-<%= link_to "商品一覧画面にもどる", p3s_path %>
-
-
-
+</div>
+</div>
