--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,12 @@
 <% if user_signed_in? %>
+<div class="log_in">
   <li><%= link_to 'マイページ', edit_user_registration_path %></li>
   <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
 <% else %>
   <li><%= link_to 'ログイン', new_user_session_path  %></li>
   <li><%= link_to 'サインアップ', new_user_registration_path %></li>
 <% end %>
+</div>
 
 <!DOCTYPE html>
 <html>
