--- a/app/views/p3s/new.html.erb
+++ b/app/views/p3s/new.html.erb
@@ -20,7 +20,7 @@
 
     </div>
   <div class="row">
-    <%= f.text_field :content, class: 'btn btn-default' %>
+    <%= f.text_field :content, class: 'btn btn-default', placeholder: "why recommeded?" %>
   </div>
 
 
