--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -1,3 +1,76 @@
 // Place all the styles related to the p3s controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.profile_img img {
+	border-radius: 50%;
+}
+
+.post {
+	margin-top: 15px;
+}
+
+/*.comment {
+	width: 300px;
+	height:100px;
+	border: 1px solid pink;
+}*/
+
+.edit {
+	margin-top: 10px;
+
+}
+#picture_picture {
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
+.post {
+	
+	color: pink;
+}
+.row {
+	margin-top: 10px;
+}
+.push {
+	margin-top: 15px;
+}
+.profile {
+	width: 550px;
+	height: 70px;
+	margin-left: 100px;
+	border: 1px solid skyblue;
+	border-radius: 5px;
+	margin-top: 100px;
+	margin-bottom: 10px;
+}
+ .text {
+   width: 600px;
+   margin-left: 100px;
+   margin-top: 50px;
+   font-size: 25px;
+ }
+
+ .profile_img  img{
+	border-radius: 50%;
+	margin: 0 auto;
+	/*margin-top: 10px;*/
+	height: 65px;
+}
+.profile:after {
+	content: "";
+	clear: both;
+	display: block;
+
+}
+.profile_img  {
+	float: left;
+	width: 100px;
+}
+.user_name {
+	float: right;
+	width: 300px;
+	color: blue;
+}
+body {
+	text-align:center;
+}
