--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -11,20 +11,19 @@
 
 
 <section class="container-fluid">
- <p class="flash"><%= notice %><%= alert %></p>
   <div class="row">
    <!-- <div class="box"> -->
       <div class="image col-md-6 col-sm-6">
-       <i class="fa fa-thumbs-o-up fa-5x" aria-hidden="true"></i>
+      <div class="ice"><%= image_tag 'ice_cream.jpg' %></div>
       </div>
 
      <div class="login col-md-6 col-sm-6">
- 		   <h3>p3shop</h3>
- 		   <p>アカウントを切り替える</p>
+ 		   <h3>tell everybody what you recommended</h3>
+ 		   
        
        <%= link_to p3s_path do %>
       <h4>一覧へ</h4>
-      <i class="fa fa-sign-in fa-5x" aria-hidden="true"></i>
+       <i class="fa fa-weixin fa-5x"></i>
       <% end %>
      </div>
  	   </div>
