--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([p3,comment]) do |f| %>
+<%= form_for([p3,comment], remote: true) do |f| %>
   <% if comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= comment.errors.count %>件のエラーがあります。</h2>
@@ -11,6 +11,9 @@
     </div>
   <% end %>
   <%= f.hidden_field :p3_id %>
+  
+
+
   <div class="field">
     <%= f.text_field :content, placeholder: "内容", class: "form-control"  %>
   </div>
