一覧画面のtitleやcontentのcss途中

--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -49,6 +49,13 @@
    margin-top: 50px;
    font-size: 25px;
  }
+ .title {
+   width: 600px;
+   margin-left: 100px;
+   margin-top: 50px;
+   font-size: 25px;
+   border-bottom: 1px solid silver;
+ }
 
  .profile_img  img{
 	border-radius: 50%;
