--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -15,7 +15,7 @@
 
 
   <div class="field">
-    <%= f.text_field :content, placeholder: "内容", class: "form-control"  %>
+    <%= f.text_field :content, placeholder: "感想や他の使い方を皆んなでshareしましょう", class: "form-control"  %>
   </div>
   <div class="actions">
     <%= f.submit %>
