--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -93,3 +93,10 @@ footer  {
 	list-style: none;
 	margin: 0;
 }
+header a {
+	color: gold;
+	text-decoration: none;
+}
+header a:hover {
+	text-decoration: none;
+}
