--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Face</title>
+  <title>p3shop</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-  <div class="p3">p3</div>
+  <div class="p3"><%= link_to "p3" , p3s_path %></div>
  <% if user_signed_in? %>
  <div class="log_in">
  <ul>
