--- a/app/views/p3s/new.html.erb
+++ b/app/views/p3s/new.html.erb
@@ -19,10 +19,11 @@
      <%= f.file_field :picture %>
 
     </div>
-  <div class="row">
-   
+   <div class="row">
+      <%= f.text_field :title, class: 'btn btn-default', placeholder: "商品名" %><br>
+
     <%= f.text_field :content, class: 'btn btn-default', placeholder: "why recommeded?" %>
-  </div>
+   </div>
 
 
     <%= f.submit class: 'btn btn-default push' %>
