--- a/app/views/p3s/show.html.erb
+++ b/app/views/p3s/show.html.erb
@@ -2,9 +2,9 @@
 <div class="child row">
   <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
     <div class="blog-text">
-      <p class="left"><strong>タイトル</strong></p>
+      <p class="left"><strong>商品名</strong></p>
       <p class="left"><%= @p3.title %></p>
-      <p class="left"><strong>内容</strong></p>
+      <p class="left"><strong>お勧めや使い方</strong></p>
       <p class="left"><%= @p3.content %></p>
       <p class="right">
         <strong>作成時間:</strong>
