--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -40,14 +40,18 @@
 	margin-left: 100px;
 	border: 1px solid skyblue;
 	border-radius: 5px;
-	margin-top: 100px;
+	margin-top: 50px;
 	margin-bottom: 10px;
 }
  .text {
    width: 600px;
    margin-left: 100px;
-   margin-top: 50px;
+   margin-top: 30px;
    font-size: 25px;
+ }
+ .text p {
+ 	text-align: left;
+ 	font-size: 18px;
  }
  .title {
    width: 600px;
@@ -55,6 +59,10 @@
    margin-top: 50px;
    font-size: 25px;
    border-bottom: 1px solid silver;
+ }
+ .title p {
+ 	text-align: left;
+ 	font-size: 18px;
  }
 
  .profile_img  img{
