priceのindex_new.htmlのadd

--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -53,6 +53,17 @@
  	text-align: left;
  	font-size: 18px;
  }
+ .price {
+   width: 300px;
+   margin-left: 100px;
+   margin-top: 5px;
+   font-size: 25px;
+   border-bottom: 1px solid silver;
+ }
+ .price p{
+ 	text-align: left;
+ 	font-size: 18px;
+ }
  .title {
    width: 600px;
    margin-left: 100px;
