--- a/app/views/p3s/new.html.erb
+++ b/app/views/p3s/new.html.erb
@@ -21,6 +21,9 @@
     </div>
    <div class="row">
       <%= f.text_field :title, class: 'btn btn-default', placeholder: "商品名" %><br>
+      <%= f.text_field :price, class: 'btn btn-default', placeholder: "購入時の値段" %><br>
+
+
 
     <%= f.text_field :content, class: 'btn btn-default', placeholder: "why recommeded?" %>
    </div>
