--- a/app/views/p3s/index.html.erb
+++ b/app/views/p3s/index.html.erb
@@ -13,11 +13,15 @@
 
 	<!-- <div class="comment"> -->
   <div class="title">
-   <p>商品名: <%= p3.title %><br></p>
+   <p>[商品名]:  <%= p3.title %><br></p>
   
    </div>
+   <div class="price">
+   	<p>[購入時の値段]: <%= p3.price %></p>
+   </div>
+
   <div class="text">
-	 <p>お勧め理由や食べ方:<%= p3.content %></p><br>
+	 <p>[お勧め理由や食べ方]:<%= p3.content %></p><br>
   </div>
 	 
 	<div class="profile">
