--- a/app/views/p3s/index.html.erb
+++ b/app/views/p3s/index.html.erb
@@ -48,7 +48,8 @@
         <%= link_to "削除" , p3_path(p3.id), method: :delete, data: { confirm: '本当に削除していいですか？'},class: 'btn btn-default' %>
      
     </div>
-       <%# <%= paginate @products %>
+        <%= paginate @page %>
+        <!-- 名前をpageに変えて見た -->
   <% end %>
  </div>
 </div>
