--- a/app/views/p3s/show.html.erb
+++ b/app/views/p3s/show.html.erb
@@ -3,6 +3,9 @@
   <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
  
     <div class="blog-text">
+
+        <%= image_tag (@p3.picture_url) %><br>
+
       <p class="left"><strong>商品名</strong></p>
       <p class="left"><%= @p3.title %></p>
       <p class="left"><strong>お勧めや使い方</strong></p>
