--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,80 +21,19 @@
 li a {
 	display: block;
 }*/
-.log_in {
-	float: right;
-	padding-right: 10px;
-	margin-top: 5px;
-}
-.log_in ul{
-  list-style: none;
-}
 
-.log_in ul li {
-	float:left;
-	width: auto;
-}
-
-.log_in ul li a {
-	margin-left: 10px;
-	padding: 5px;
-	text-decoration: none;
-	color: gold;
-}
-.log_in ul li a:hover {
-	color: skyblue;
-}
-.log_out {
-	float: right;
-	padding-right: 10px;
-	margin-top: 5px;
-}
-.log_out ul {
-		list-style: none;
-}
-.log_out ul li {
-	float:left;
-	width: auto;
-}
-
-.log_out ul li a {
-	margin-left: 10px;
-	padding: 5px;
-	text-decoration: none;
-	color: gold;
-}
-.log_out ul li a:hover {
-	color: skyblue;
-}
 
 html {
 	position: relative;
-	min-height: 100%;
+	height: 100%;
 }
 body {
 	text-align: center;
-}
-footer {
-	height: 50px;
-	width: 100%;
-	
-	/*margin: auto;*/
-	position: absolute;
-	bottom: 0;
-	text-align: center;
-	background-color: skyblue;
-}
-footer a {
-	color: white;
-
+	height: 100%;
 }
 
-footer  {
-	list-style: none;
-	margin: 0;
-}
 header a {
-	color: gold;
+	color: white;
 	text-decoration: none;
 }
 header a:hover {
