--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -2,6 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+.header {
+	height: 100px;
+	border-bottom: 1px solid gold;
+	color: gold;
+	width: 100%;
+	margin: 0px;
+
+}
 .profile_img img {
 	border-radius: 50%;
 }
@@ -9,7 +18,9 @@
 .post {
 	margin-top: 15px;
 }
-
+.new_action {
+	margin-bottom: 10px;
+}
 /*.comment {
 	width: 300px;
 	height:100px;
