commentのdestroyアクション

--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -11,6 +11,11 @@
 	margin: 0px;
 
 }
+.header h4 {
+	text-align: center;
+	padding-top: 30px;
+	color: gray;
+}
 .profile_img img {
 	border-radius: 50%;
 }
