--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -59,38 +59,88 @@
 	margin-top: 50px;
 	margin-bottom: 10px;
 }
+
  .text {
-   width: 600px;
-   margin-left: 100px;
+   /*width: 800px;*/
    margin-top: 30px;
    font-size: 25px;
+   text-align: left;
+
  }
  .text p {
- 	text-align: left;
- 	font-size: 18px;
+
+   /*text-align: left;*/
+   font-size: 18px;
+   color: #505050;/*文字色*/
+   padding: 0.5em;/*文字周りの余白*/
+   display: inline-block;/*おまじない*/
+   line-height: 1.3;/*行高*/
+   background: #dbebf8;/*背景色*/
+   vertical-align: middle;/*上下中央*/
+   border-radius: 25px 0px 0px 25px;/*左側の角を丸く*/
+
+ }
+ .text p:before {
+ 	content: '●';
+    color: white;
+    margin-right: 8px;
+
  }
  .price {
-   width: 300px;
-   margin-left: 100px;
+   /*width: 200px;*/
+   /*margin-left: 10px;*/
    margin-top: 5px;
    font-size: 25px;
-   border-bottom: 1px solid silver;
+   text-align: left;
+
+   /*border-bottom: 1px solid silver;*/
  }
  .price p{
- 	text-align: left;
+ 	/*text-align: left;*/
  	font-size: 18px;
+ 	color: #505050;/*文字色*/
+    padding: 0.5em;/*文字周りの余白*/
+    display: inline-block;/*おまじない*/
+    line-height: 1.3;/*行高*/
+    background: #dbebf8;/*背景色*/
+    vertical-align: middle;/*上下中央*/
+    border-radius: 25px 0px 0px 25px;/*左側の角を丸く*/
+
+ }
+ .price p:before {
+ 	content: '●';
+    color: white;
+    margin-right: 8px;
+
  }
  .title {
-   width: 600px;
-   margin-left: 100px;
-   margin-top: 50px;
-   font-size: 25px;
-   border-bottom: 1px solid silver;
- }
+ 	position:relative;
+     width: auto;
+     margin-top: 50px;
+     font-size: 25px;
+     text-align: left;/*中のpの文字を左端に*/
+
+
+  }
+
  .title p {
- 	text-align: left;
  	font-size: 18px;
+ 	width: auto;
+ 	color: #505050;/*文字色*/
+    padding: 0.5em;/*文字周りの余白*/
+    display: inline-block;/*おまじない*/
+    line-height: 1.3;/*行高*/
+    background: #dbebf8;/*背景色*/
+    vertical-align: middle;/*上下中央*/
+    border-radius: 25px 0px 0px 25px;/*左側の角を丸く*/
+
  }
+.title p:before {
+	content: '●';
+	color: white;
+	margin-right: 8px;
+	}
+
 
  .profile_img  img{
 	border-radius: 50%;
