--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -6,7 +6,7 @@
         <p class="left"><%= comment.content %></p>
         <% if current_user.id == comment.user.id %>
           <p class="right">
-            <%= link_to '', edit_p3_comment_path(p3,comment), class: "fa fa-pencil-square-o fa-lg" %>
+            <%#= link_to '', edit_p3_comment_path(p3,comment), class: "fa fa-pencil-square-o fa-lg" %>
             <%= link_to '', p3_comment_path(p3,comment), class: "fa fa-trash-o fa-lg", method: :delete, remote: true, data: { confirm: '本当に削除していいですか？' } %>
           </p>
         <% end %>
