validateと投稿画面のcss

--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -173,3 +173,10 @@ body {
 .wrapper {
 	padding-bottom: 100px;
 }
+input {
+	margin: 0 auto;
+	margin-bottom: 30px;
+}
+.btn-default {
+	margin-bottom: 10px;
+}
