--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -4,11 +4,17 @@
 
 
 .header {
-	height: 100px;
+	/*height: 100px;
 	border-bottom: 1px solid gold;
 	color: gold;
 	width: 100%;
-	margin: 0px;
+	margin: 0px;*/
+	margin-right: 5px;
+	margin-left: 5px;
+	background: #dfefff;
+    box-shadow: 0px 0px 0px 5px #dfefff;
+    border: dashed 2px white;
+    padding: 0.2em 0.5em;
 
 }
 .header h4 {
