--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -26,8 +26,9 @@
 	color: gray;
 }
 .img {
-	width: 960px;
+	width: 860px;
 	height: 720px;
+	margin-right: 500px;
 }
 .profile_img img {
 	border-radius: 50%;
