comment登録ボタン消す

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -17,7 +17,7 @@
   <div class="field">
     <%= f.text_field :content, placeholder: "感想や他の使い方を皆んなでshareしましょう", class: "form-control"  %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <!-- <div class="actions"> -->
+    <%#= f.submit %>
+  <!-- </div> -->
 <% end %>
