--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -10,6 +10,7 @@
 	margin-top: 80px;
 	margin-bottom: 80px;
 	float:right;
+
 }
 .login h3 {
 	font-family: 'Pacifico', cursive;
@@ -22,6 +23,7 @@
 }
 .login a {
 	text-decoration: none;
+
 }
 .login p {
 	margin-top: 15px;
@@ -89,12 +91,12 @@ header  {
     transform: translate(-50%,-50%);
 
 }
-.log_in li a{
-	color: white;
+/*.log_in li a{
+	color: gray;
 }
 .log_out a{
-	color: white;
-}
+	color: gray;
+}*/
 
 .log_out {
     position: absolute;
@@ -113,6 +115,7 @@ header  {
 	float: right;
 	padding-right: 10px;
 	margin-top: 5px;
+	/*color: gray;*/
 }
 .log_in ul{
   list-style: none;
@@ -127,7 +130,7 @@ header  {
 	margin-left: 10px;
 	padding: 5px;
 	text-decoration: none;
-	color: white;
+	color: gray;
 }
 .log_in ul li a:hover {
 	color: skyblue;
