--- a/app/assets/stylesheets/users/registrations.scss
+++ b/app/assets/stylesheets/users/registrations.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the users::registrations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.field {
+	border-bottom: 1px solid #dfefff;
+}
+h3 {
+	color: skyblue;
+}
