--- a/app/views/p3s/new.html.erb
+++ b/app/views/p3s/new.html.erb
@@ -19,8 +19,13 @@
        <div class="col-md-8 col-md-offset-2">
          <%= form_for(@p3) do |f| %>
           <div class="row">
-             <%= f.file_field :picture %>
+             <%#= f.file_field :picture %>
              <%= image_tag (@p3.picture_url) %>
+             <form>
+             <input type="file">
+             </form>
+             <div class="preview">
+          </div>
           </div>
 
 
@@ -36,3 +41,40 @@
       <% end %>
 
      </div>
+ <script>
+      $(function(){
+  //画像ファイルプレビュー表示のイベント追加 fileを選択時に発火するイベントを登録
+  $('form').on('change', 'input[type="file"]', function(e) {
+    var file = e.target.files[0],
+        reader = new FileReader(),
+        $preview = $(".preview");
+        t = this;
+
+    // 画像ファイル以外の場合は何もしない
+    if(file.type.indexOf("image") < 0){
+      return false;
+    }
+
+    // ファイル読み込みが完了した際のイベント登録
+    reader.onload = (function(file) {
+      return function(e) {
+        //既存のプレビューを削除
+        $preview.empty();
+        // .prevewの領域の中にロードした画像を表示するimageタグを追加
+        $preview.append($('<img>').attr({
+                  src: e.target.result,
+                  width: "150px",
+                  class: "preview",
+                  title: file.name
+              }));
+      };
+     })(file);
+
+     reader.readAsDataURL(file);
+    });
+   });
+
+
+
+
+ </script>
