--- a/app/assets/stylesheets/p3s.scss
+++ b/app/assets/stylesheets/p3s.scss
@@ -25,10 +25,10 @@
 	text-align: center;
 	color: gray;
 }
-.img {
-	width: 860px;
-	height: 720px;
-	margin-right: 500px;
+img {
+	width: 500px;
+	height: 500px;
+	margin-right: 300px;
 }
 .profile_img img {
 	border-radius: 50%;
