--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -18,6 +18,6 @@
     <%= f.text_field :content, placeholder: "感想や他の使い方を皆んなでshareしましょう", class: "form-control"  %>
   </div>
    <div class="actions"> 
-    <%= f.submit %>
+    <%= f.submit :class => "submit" %>
    </div> 
 <% end %>
