--- a/app/views/p3s/new.html.erb
+++ b/app/views/p3s/new.html.erb
@@ -1,46 +1,42 @@
 <p id="notice"><%= notice %></p>
-  <% if @p3.errors.any? %>
-     <div id="error_explanation">
+<% if @p3.errors.any? %>
+<div id="error_explanation">
       <!-- バリデーションエラーの件数表示   -->
-       <h2><%= @p3.errors.count %>件のエラーがあります</h2>
-
-        <ul>
-         <% @p3.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-           <% end %>
-        </ul>
-      </div>
-    <% end %>
+<h2><%= @p3.errors.count %>件のエラーがあります</h2>
+<ul>
+  <% @p3.errors.full_messages.each do |msg| %>
+  <li><%= msg %></li>
+  <% end %>
+</ul>
+</div>
+<% end %>
       
 
-       <%= link_to "商品一覧画面にもどる" , p3s_path, class: 'btn btn-default' %>
-
-     <div class="container">
-       <div class="col-md-8 col-md-offset-2">
-         <%= form_for(@p3) do |f| %>
-          <div class="row">
-             <%= f.file_field :picture %>
-             <%= image_tag (@p3.picture_url) %>
-             
-             <!-- <input type="file"> -->
-             
-             <div class="preview">
-          </div>
-          </div>
-
-
-         <div class="row">
-          <%= f.text_field :title, class: 'btn btn-default', placeholder: "商品名" %><br>
-          <%= f.text_field :price, class: 'btn btn-default', placeholder: "購入時の値段" %><br>
-          <%= f.text_field :content, class: 'btn btn-default', placeholder: "why recommeded?" %>
-         </div>
+<%= link_to "商品一覧画面にもどる" , p3s_path, class: 'btn btn-default' %>
+<div class="container">
+  <div class="col-md-8 col-md-offset-2">
+  <%= form_for(@p3) do |f| %>
+  <div class="row">
+  <%= f.file_field :picture %>
+  <%# image_tag (@p3.picture_url) %>
+   <!-- <input type="file"> -->
+  <div class="preview">
+  </div>
+  </div>
+  <div class="row">
+  <%= f.text_field :title, class: 'btn btn-default', placeholder: "商品名" %><br>
+  <%= f.text_field :price, class: 'btn btn-default', placeholder: "購入時の値段" %><br>
+  <%= f.text_field :content, class: 'btn btn-default', placeholder: "why recommeded?" %>
+  </div>
 
 
-         <%= f.submit class: 'btn btn-default push' %>
-       </div>
-      <% end %>
+  <%= f.submit class: 'btn btn-default push' %>
+  </div>
+<% end %>
 
-     </div>
+</div>
+
+
  <script>
       $(function(){
   //画像ファイルプレビュー表示のイベント追加 fileを選択時に発火するイベントを登録
